--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,13 @@ spring.datasource.password=
 
 # console query print
 spring.jpa.properties.hibernate.show_sql=true
-
 # query formatting
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.jpa.properties.hibernate.highlight_sql=true
 
-spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # query bidding parmeter print
